[gd_scene load_steps=9 format=3 uid="uid://yt4cs7sovdyt"]

[ext_resource type="Script" path="res://Main/Main.gd" id="1_fxc0m"]
[ext_resource type="Script" path="res://Main/Logs.gd" id="2_d75pd"]
[ext_resource type="Script" path="res://Main/UserInfo.gd" id="2_rk2k5"]
[ext_resource type="Script" path="res://Main/Friends.gd" id="3_60uvj"]
[ext_resource type="StyleBox" uid="uid://bfuqn2qms832" path="res://Main/FriendListButtons/Pressed.tres" id="4_t0xn1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pxgi2"]
bg_color = Color(0.113725, 0.168627, 0.176471, 1)
corner_radius_top_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l8o4m"]
bg_color = Color(0.2, 0.372549, 0.4, 1)
corner_radius_top_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q7yjh"]
bg_color = Color(0.113725, 0.168627, 0.176471, 1)
corner_radius_top_right = 16

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fxc0m")

[node name="BackGround" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.533333, 0.576471, 1)

[node name="Tile" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -260.0
offset_right = 260.0
offset_bottom = 91.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0.219608, 0.219608, 0.219608, 1)
theme_override_constants/shadow_offset_x = -2
theme_override_constants/shadow_offset_y = -4
theme_override_font_sizes/font_size = 64
text = "Delfi:World"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 1864.0
offset_top = 8.0
offset_right = 1912.0
offset_bottom = 56.0
theme_override_colors/font_color = Color(0.72549, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "X"

[node name="Logs" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -512.0
offset_top = 128.0
offset_right = -64.0
offset_bottom = 416.0
grow_horizontal = 0
script = ExtResource("2_d75pd")

[node name="Tile" type="Label" parent="Logs"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.0
offset_right = 96.0
offset_bottom = 37.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0.219608, 0.219608, 0.219608, 1)
theme_override_constants/shadow_offset_x = -2
theme_override_constants/shadow_offset_y = -4
theme_override_font_sizes/font_size = 24
text = "Logs"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Text" type="RichTextLabel" parent="Logs"]
layout_mode = 0
offset_left = 16.0
offset_top = 40.0
offset_right = 432.0
offset_bottom = 272.0
fit_content = true

[node name="Friends" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -544.0
offset_right = 512.0
offset_bottom = -32.0
grow_vertical = 0
script = ExtResource("3_60uvj")

[node name="Tile" type="Label" parent="Friends"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.0
offset_right = 96.0
offset_bottom = 37.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0.219608, 0.219608, 0.219608, 1)
theme_override_constants/shadow_offset_x = -2
theme_override_constants/shadow_offset_y = -4
theme_override_font_sizes/font_size = 24
text = "Freinds
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ListButton" type="Button" parent="Friends"]
layout_mode = 0
offset_left = 16.0
offset_top = 40.0
offset_right = 224.0
offset_bottom = 80.0
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_pxgi2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_l8o4m")
toggle_mode = true
button_pressed = true
text = "List"

[node name="AddFriendButton" type="Button" parent="Friends"]
layout_mode = 0
offset_left = 224.0
offset_top = 40.0
offset_right = 432.0
offset_bottom = 80.0
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_q7yjh")
theme_override_styles/pressed = ExtResource("4_t0xn1")
toggle_mode = true
text = "Add friend"

[node name="PageList" type="Control" parent="Friends"]
anchors_preset = 0
offset_left = 16.0
offset_top = 80.0
offset_right = 432.0
offset_bottom = 496.0

[node name="ItemList" type="ItemList" parent="Friends/PageList"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PageAddFriend" type="Control" parent="Friends"]
visible = false
anchors_preset = 0
offset_left = 16.0
offset_top = 80.0
offset_right = 432.0
offset_bottom = 496.0

[node name="Panel" type="Panel" parent="Friends/PageAddFriend"]
layout_mode = 0
offset_right = 416.0
offset_bottom = 416.0

[node name="UserInfo" type="Panel" parent="."]
layout_mode = 1
offset_left = 64.0
offset_top = 128.0
offset_right = 384.0
offset_bottom = 480.0
script = ExtResource("2_rk2k5")

[node name="Tile" type="Label" parent="UserInfo"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.0
offset_right = 96.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0.219608, 0.219608, 0.219608, 1)
theme_override_constants/shadow_offset_x = -2
theme_override_constants/shadow_offset_y = -4
theme_override_font_sizes/font_size = 24
text = "Username"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Text" type="RichTextLabel" parent="UserInfo"]
layout_mode = 0
offset_left = 16.0
offset_top = 40.0
offset_right = 304.0
offset_bottom = 336.0
fit_content = true

[node name="System" type="Node" parent="."]

[node name="CheckRequest" type="HTTPRequest" parent="System"]

[node name="UpdateRequest" type="HTTPRequest" parent="System"]

[node name="Timer" type="Timer" parent="System"]

[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Friends/ListButton" to="." method="_on_list_button_pressed"]
[connection signal="pressed" from="Friends/ListButton" to="Friends" method="_on_list_button_pressed"]
[connection signal="pressed" from="Friends/AddFriendButton" to="Friends" method="_on_add_friend_button_pressed"]
[connection signal="request_completed" from="System/CheckRequest" to="." method="_on_check_request"]
[connection signal="request_completed" from="System/UpdateRequest" to="." method="_on_update_request"]
[connection signal="timeout" from="System/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="System/Timer" to="Logs" method="_on_timer_timeout"]
[connection signal="timeout" from="System/Timer" to="UserInfo" method="_on_timer_timeout"]
